# mai_oop

./: README.md
lab1/: CMakeCache.txt  CMakeLists.txt  Makefile
lab1/src/: CMakeLists.txt  Makefile  main  main.cpp  translate_into_turkish.cpp  translate_into_turkish.hpp
lab1/test/: CMakeLists.txt  Makefile  translate_test  translate_test.cpp
laba1/: CMakeLists.txt  README.md  func.cpp  func.hpp  laba1.cpp  tests.cpp
laba2/: CMakeLists.txt  README.md  five.cpp  five.hpp  main.cpp  tests.cpp
laba3/: CMakeLists.txt  main.cpp  tests.cpp
laba3/src/: Farray.cpp  Farray.hpp  figure.cpp  figure.hpp  pentagon.cpp  pentagon.hpp  point.cpp  point.hpp  rhomb.cpp  rhomb.hpp  trapezoid.cpp  trapezoid.hpp
laba4/: CMakeLists.txt  main.cpp  tests.cpp
laba5/: CMakeLists.txt  main.cpp
laba5/include/: allocator.hpp  queue.hpp
laba5/test/: test.cpp
laba6/: CMakeLists.txt  main.cpp
laba6/include/: bull.hpp  dragon.hpp  frog.hpp  npc.hpp
laba6/src/: bull.cpp  dragon.cpp  frog.cpp  npc.cpp
laba6/test/: test.cpp
laba7/: CMakelists.txt  main.cpp
laba7/include/: bull.hpp  dragon.hpp  factory.hpp  fight.hpp  frog.hpp  npc.hpp  observer.hpp
laba7/src/: bull.cpp  dragon.cpp  factory.cpp  fight.cpp  frog.cpp  npc.cpp  observer.cpp
laba7/test/: test.cpp
